[package]
name = "graph-dag"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
itertools = "0.14.0"
petgraph = { version = "0.8.2", optional = true, features = ["all"] }
thiserror = "2.0.12"

[dev-dependencies]
insta = "1.43.1"
rand = "0.9.1"

[features]
petgraph = ["dep:petgraph"]
